plugins {
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.cucumber:cucumber-java:7.10.0'
    implementation 'com.microsoft.playwright:playwright:1.39.0'
    implementation 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

application {
    mainClass = 'org.example.Main'
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaExec) {
    jvmArgs = ['--enable-preview']
}

tasks.withType(JavaCompile) {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

